# ner-project

./: .env.example  .gitignore  AGENTS.md  Dockerfile  NER-Platform-Presentation.pptx  PROJECT.md  PROJECT.md.template  README.md  alembic.ini  docker-compose.yml  login.json  mlflow.db  package-lock.json  package.json  pyproject.toml  pytest.ini  tmp_check_schema.py  ~$NER-Platform-Presentation.pptx
.claude/: settings.json
.opencode/commands/: ask.md  opsx-apply.md  opsx-archive.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_tenant_template_schema.py  003_document_service_tables.py  004_annotation_service_tables.py  005_training_service_tables.py  006_mlflow_tracking_columns.py  007_add_extraction_run_columns.py  008_add_document_id_to_extracted_entities.py  009_add_bio_tags_to_spans.py  010_chatbot_infrastructure.py  011_analytics_materialized_views.py  012_reconcile_training_jobs_columns.py  013_add_missing_created_at_columns.py  014_add_imported_annotations_table.py
docs/: NER Platform.dc.html  NER Platform.html  requirements.md  tenant_custom_ner_prd_opencode_openspec.docx.md
docs/adr/: 001-tenant-data-isolation.md  002-base-model-strategy.md  003-model-serving-topology.md  004-openspec-governance.md  005-opencode-agent-boundaries.md  006-training-infrastructure.md  007-chatbot-architecture.md  008-base-model-as-default.md
docs/decomposition/: frontend-ui.md  multi-tenant-ner-platform.md
docs/design-docs/: 01-technical-design.md
openspec/: config.yaml
scripts/: _check_tenants.py  check_tenant_slugs.py  check_tenants.py  check_tenants2.py  migrate_existing_tenants.py  setup_test_db.py
src/analytics_service/: common.py  dependencies.py  main.py  worker.py
src/annotation_service/: main.py
src/chat_api/: main.py
src/gateway/: main.py  (+3 more)
tests/: conftest.py  test_analytics_dashboard.py  test_analytics_export.py  test_analytics_query_api.py  test_annotation_import.py  test_annotation_workspace.py  test_batch_extraction.py  test_bio_tags.py  test_chat_api_conversations.py  test_chat_api_guardrails.py  test_chat_api_rag.py  test_chat_api_rate_limiter.py  test_chat_api_sql.py  test_chat_api_widget.py  test_chat_gateway_integration.py  test_dashboard_summary.py  test_document_ingestion.py  test_entity_config.py  test_entity_query.py  test_env_config.py  test_extraction_api.py  test_extraction_gateway_proxy.py  test_inference_endpoint.py  test_mlflow_integration_live.py  test_mlflow_registry.py  test_mlflow_verification.py  test_model_cache.py  test_model_registry.py  test_tenant_provisioning.py  test_training_jobs.py  test_training_worker.py  test_user_auth.py  test_warmup_endpoint.py
(+1270 files in other folders)
