[project]
name = "ner-project"
version = "0.1.0"
description = "NER Platform API Gateway"
authors = [
    {name = "theertha krishna", email = "theertha@inapp.com"}
]
requires-python = ">=3.11"
dependencies = ["fastapi (>=0.136.3,<0.137.0)", "uvicorn[standard] (>=0.49.0,<0.50.0)", "sqlalchemy[asyncio] (>=2.0.50,<3.0.0)", "asyncpg (>=0.31.0,<0.32.0)", "alembic (>=1.18.4,<2.0.0)", "python-jose[cryptography] (>=3.5.0,<4.0.0)", "passlib[bcrypt] (>=1.7.4,<2.0.0)", "pydantic-settings (>=2.14.1,<3.0.0)", "redis (>=5.0.0)", "python-multipart (>=0.0.32,<0.0.33)", "bcrypt (<4.0.0)", "pydantic (>=2.13.4,<3.0.0)", "boto3 (>=1.43.25,<2.0.0)", "pymupdf (>=1.27.2.3,<2.0.0.0)"]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "anyio (>=4.13.0,<5.0.0)",
    "faker (>=40.21.0,<41.0.0)",
    "requests-mock (>=1.12.1,<2.0.0)"
]
